--- a/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Common/css/home.css
+++ b/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Common/css/home.css
@@ -13,7 +13,7 @@ a, a:hover,a:focus{text-decoration: none;}
 .top{ background-color:#fff;border-bottom: 4px solid #4178be;}
 .top_main{ width:100%; height:114px; margin:0 auto; position:relative;}
 .top_logo{ width:350px; height:50px; position:relative; top:0px; left:0px;}
-.top_logo_a{  color: #4178be; font-size: 24px; font-weight: bold; height: 60px; float:left; text-underline: none;}
+.top_logo_a{  color: #4a8cda; font-size: 24px; font-weight: bold; height: 60px; float:left; text-underline: none;}
 a.top_logo_a:hover ,a.top_logo_a:visited{  color: #4a8cda; font-size: 24px; font-weight: bold; height: 60px;text-underline: none;}
 
 /*导航*/
