--- a/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Common/css/home.css
+++ b/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Common/css/home.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 0px;
-  padding-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 /* CSS Document */
@@ -13,13 +13,20 @@ a, a:hover,a:focus{text-decoration: none;}
 .top{ background-color:#fff;border-bottom: 4px solid #4178be;}
 .top_main{ width:100%; height:114px; margin:0 auto; position:relative;}
 .top_logo{ width:350px; height:50px; position:relative; top:0px; left:0px;}
-.top_logo_a{  color: #4a8cda; font-size: 24px; font-weight: bold; height: 60px; float:left; text-underline: none;}
+.top_logo_a{  color: #4178be; font-size: 24px; font-weight: bold; height: 60px; float:left; text-underline: none;}
 a.top_logo_a:hover ,a.top_logo_a:visited{  color: #4a8cda; font-size: 24px; font-weight: bold; height: 60px;text-underline: none;}
 
 /*导航*/
 .top_nav{ width:100%; height:40px; position:absolute; top:74px; right:0;}
-a.top_nav_sub{ display:block; float:left;  height:40px; position:relative; font-size:17px; line-height:40px; text-align:center; cursor:pointer;padding: 0 30px;margin-right: 10px;}
-a.top_nav_subOn{ background-color:#4178be; color:#fff;}
+a.top_nav_sub{ display:block; float:left;  height:40px; position:relative; font-size:17px; line-height:40px; text-align:center; cursor:pointer;padding: 0 30px;margin-right: 10px;}a.top_nav_subOn{ background-color:#4178be; color:#fff;}
+.nav>li>a {display:block; float:left;  height:40px; position:relative; font-size:17px; line-height:40px; text-align:center; cursor:pointer;padding: 0 30px;margin-right: 10px;}
+.nav>li>a:hover, .nav>li>a:active{ background-color:#4178be; color:#fff;}
+.seperateLine{border-bottom: 4px solid #4178be; margin-bottom: 5px;}
+#navbar{margin-left: 0px;padding-left: 0px;}
+.quicklinkright{  display:block; float:left;  height:40px; position:relative; font-size:15px; line-height:40px; text-align:center; cursor:pointer;}
+.denglu{color: #999;margin-right: 10px;}
+.denglu:hover{color: #4178be;}
+.zhuce {font-size:15px;color: #e76e4d;}
 
 /*检索*/
 .js_search{width: 508px;height: 40px;position: absolute;right:0px;top: 23px;}
@@ -75,4 +82,9 @@ a.scp2_rmfw_sub:hover span{ color:#4178be;}
     margin: 0 auto;
     position: relative;
     float: left;}
+.anchorBL{
+ display :none;
+}
+
+
 
