--- a/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Common/css/js_bszn_wzy_a.css
+++ b/无锡市建筑工程基础资源管理信息平台-企业版/WxjzgcjczyQyb.Web/WxjzgcjczyQybPage/Common/css/js_bszn_wzy_a.css
@@ -119,7 +119,7 @@ a{text-decoration: none;color: #333;}
 /*收费标准 结束*/
 
 /*右侧 开始*/
-.main_right{width: 280px;float: right;padding: 5px 20px 20px;margin-bottom: 20px;background: #f2f2f2;position: absolute;right: 0;top:-51px;}
+.main_right{width: 280px;float: right;padding: 5px 20px 20px;margin-bottom: 20px;background: #f2f2f2;position: absolute;right: 0;top:-51px; margin-right: -30px;}
 .main_rightfix{position: fixed;top: 0px;right: 50%;margin-right: -600px;z-index:1000;}
 .main_right_01{float: left;width: 100%;}
 .main_right_11{float: left;width: 100%;height: 45px;line-height: 45px;color: #628fc9;font-size:17px;font-weight: bold;background-image: url(../images/js_wzy_09.png);background-position: 0 center;background-repeat: no-repeat;padding-left: 10px;cursor:pointer;border-bottom: 1px dashed #ccc;height: 45px;line-height: 45px;color: #628fc9;font-size:17px;font-weight: bold;}
