1. 添加安监申报页面:环境及地下设施交底项目、危险源较大工程清单 2. 调整安监申报详细页面tab标签样式

--- a/无锡市建筑工程基础资源管理信息平台/IntegrativeShow2015/App_Themes/Themes_Standard/Stylesheet1.css
+++ b/无锡市建筑工程基础资源管理信息平台/IntegrativeShow2015/App_Themes/Themes_Standard/Stylesheet1.css
@@ -416,3 +416,11 @@ a:hover
 	height: 2px; 
 	background: #339E9E
 }
+
+.view_tab_header
+{
+    padding-left: 40px;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 25px;
+}
