--- a/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.Web/WxjzgcjczyPage/Common/css/shCore.css
+++ b/无锡市建筑工程基础资源管理信息平台/Wxjzgcjczy.Web/WxjzgcjczyPage/Common/css/shCore.css
@@ -452,21 +452,33 @@ v\:*{behavior:url(#default#VML);}
 body{margin: 0px;padding: 0px;overflow:hidden;}
 #mapDiv{width: 100%;height:100%;position: relative;background: #e8e8e8;z-index:1;}
 #outter{position: relative;background: gray;min-width: 600px;overflow: hidden;}
-#describediv{line-height:26px;padding:10px;font-size:13px;background-color:white;background-position:bottom left;background-repeat: repeat-x;background-image:url("../images/describebac.jpg");border:solid 1px gray;display: block ;position:  absolute;right:36px;top:60px; width:260px;z-index:1001;overflow-y: auto;
+#describediv{line-height:26px;padding:10px;font-size:13px;background-color:white;background-position:bottom left;background-repeat: repeat-x;background-image:url("../images/describebac.jpg");border:solid 1px gray;display: block ;position:  absolute;right:96px;top:60px; width:260px;z-index:1001;overflow-y: auto;
     -webkit-box-shadow: #4E4B4B 0px 3px 6px;
     -moz-box-shadow: #4E4B4B 0px 3px 6px;
     box-shadow: #4E4B4B 0px 3px 6px;
 }
+#codeContainer{display: none ;position: absolute;left:0px;bottom:0px;width:100%;height:200px;background:white; z-index:999;overflow-y: scroll;}
 
+#codeButton1{position:absolute;bottom:0px;z-index:100000;width:93px;height:13px;background-image: url("../images/all.png");background-position: 105px 78px;overflow: hidden;}
+#codeButton1:hover{background-position: 105px 108px; cursor: pointer;}
+#codeButton2{background-image: url("../images/all.png");background-position: 105px 26px;display:none;position:absolute;bottom:200px;z-index:100000;width:93px;height:13px;overflow: hidden;}
+#codeButton2:hover{background-position: 105px 51px;cursor: pointer;}
 
-.codeButton0style1{position:absolute;top:30px;right:150px;width:76px;height:40px;background-position: 150px 195px;z-index:100000;background-image: url("../images/buttons.png");overflow: hidden;}
-.codeButton0style2{position:absolute;top:30px;right:150px;width:76px;height:40px;background-position: 150px 162px;z-index:100000;background-image: url("../images/buttons.png");overflow: hidden;}
+.codeButton0style1{position:absolute;top:30px;right:100px;width:76px;height:30px;background-position: 150px 195px;z-index:100000;background-image: url("../images/all.png");overflow: hidden;}
+.codeButton0style2{position:absolute;top:30px;right:100px;width:76px;height:30px;background-position: 150px 162px;z-index:100000;background-image: url("../images/all.png");overflow: hidden;}
 .codeButton0style2:hover,.codeButton0style1:hover{background-position: 150px 162px; cursor: pointer;}
-
-.mapTypeStyle{position:absolute;top:30px;right:90px;width:50px;height:40px; z-index: 1000;}
-
+.controlButtonstyle1{position:absolute;top:30px;right:84px;width:76px;height:30px;background-position: 74px 195px;z-index:100000;background-image: url("../images/all.png");overflow: hidden;}
+.controlButtonstyle2{position:absolute;top:30px;right:84px;width:76px;height:30px;background-position: 74px 162px;z-index:100000;background-image: url("../images/all.png");overflow: hidden;}
+.controlButtonstyle1:hover,.controlButtonstyle2:hover{background-position: 74px 162px;cursor: pointer;}
+#close{display:none;z-index:10001;position: absolute;right:101px;top:63px;width:10px;height:10px;background-image: url("../images/close1.png");}
+#close:hover{cursor: pointer;background-image: url("../images/close2.png");}
+#codeContent{display:none;width:0px;height:0px;position:absolute;left:0px;top:0px;}
+#copy-button:hover{cursor:pointer;}
 /*background-position: 105px 78px;
 border-top: solid 1px blue;*/
+
+.mapTypeStyle{position:absolute;top:30px;right:50px;width:40px;height:40px; z-index: 1000;}
+
 
 
 
